fix: disable portfolio link on mobile

--- a/apps/portfolio/components/Navbar/index.module.scss
+++ b/apps/portfolio/components/Navbar/index.module.scss
@@ -10,7 +10,8 @@
   }
 
   button {
-    padding: 0;
+    padding-top: 0;
+    padding-bottom: 0;
     text-transform: none;
   }
 }
